# BerylScript

./: .gitignore  Cargo.toml  README.md  package.json  simp.em  test.brl  test.em  times 9-14-20.txt
.github/workflows/: Test.yml  build.yml  rust.yml
gem/: Cargo.toml
gem-cli/: Cargo.toml  test.em
gem-cli/benches/: help.em
gem-cli/src/: main.rs
gem/src/: bench.rs  lib.rs
gem/src/interpreter/: builtins.rs  mod.rs  tests.rs  types.rs
gem/src/interpreter/test_files/: if_elif_else_test.em
gem/src/lexer/: mod.rs  tests.rs
gem/src/parser/: mod.rs  tests.rs
gem_cli/: Cargo.toml
gem_cli/benches/: bench.sh  test.em  test.js
gem_cli/src/: beryl.rs  help.txt  main.rs
gem_cli/src/examples/: example1.em  example2.em  example3.em  example4.em
src/: arguments.lalrpop  bench.rs  bin.rs  compiler.js  compiler.rs  grammar.lalrpop  interpreter.rs  lexer.rs  lib.rs  main.js  main.rs  parser.rs
src/gem/: mod.rs
src/gem/interpreter/: tests.rs
src/gem/lexer/: tests.rs
src/gem/parser/: tests.rs
src/interpreter/: builtins.rs  mod.rs
src/interpreter/test_files/: for_test.em  if_elif_else_test.em
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
