[package]
name = "gem"
version = "0.0.6"
description = "A simple interpreted language written entirely in rust"
keywords = ["parser", "lexer", "interpeter", "language"]
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
repository = "https://github.com/AnActualEmerald/EmeraldScript.git"
edition = "2018"

build = "build.rs"

[build-dependencies]
lalrpop = "0.19.5"

[dependencies]
regex = "1"
console = "0.12.0"
clap = "2.33.0"
lalrpop-util = "0.19.5"

[lib]
name = "gem"
path = "src/lib.rs"

[[bin]]
name = "gem-bin"
path = "src/bin.rs"