[package]
name = "gem"
version = "0.0.6"
description = "A simple interpreted language written entirely in rust"
keywords = ["parser", "lexer", "interpeter", "language"]
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
repository = "https://github.com/AnActualEmerald/BerylScript.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
console = "0.15.0"
clap = "3.1.16"
peeking_take_while = "1.0.0"
atty = "0.2.14"

[lib]
name = "gem"
path = "src/lib.rs"

[[bin]]
name = "beryl"
path = "src/bin.rs"
