[package]
name = "gem"
version = "0.0.3"
description = "A simple interpreted language written entirely in rust"
keywords = ["parser", "lexer", "interpeter", "language"]
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
repository = "https://github.com/AnActualEmerald/EmeraldScript.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
