[package]
name = "beryl"
version = "0.0.3"
authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gem = {path = "../gem"}
clap = "2.33.0"
rustyline = "6.3.0"
directories = "3.0.1"
console = "0.12.0"